# Checkers

./: .env.example  .gitignore  Caddyfile  Makefile  README.md  docker-compose.yml  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json
backend/: .dockerignore  Dockerfile  README.md  package.json  pyproject.toml
backend/app/: config.py  db.py  main.py
backend/app/auth/: deps.py  models.py  routes.py  schemas.py  security.py
backend/app/billing/: models.py  routes.py  skins.py  stripe_client.py
backend/app/coach/: analyzer.py  llm.py  prompts.py  routes.py
backend/app/common/: elo.py
backend/app/games/: manager.py  models.py  routes.py  schemas.py  service.py  ws.py
backend/app/games/engine/: __init__.py  board.py  eval.py  moves.py  rules.py  search.py  zobrist.py
backend/app/leaderboard/: cities.py  routes.py
backend/app/puzzles/: models.py  routes.py  seed_data.py
backend/app/scripts/: init_db.py  seed.py
backend/src/: checkers-room.ts
backend/supabase/migrations/: 001_profiles.sql  002_matches_moves.sql  004_profile_metadata.sql  005_username_search.sql
backend/tests/: conftest.py  test_api_smoke.py  test_engine_rules.py  test_search.py  test_ws_manager.py
frontend/: Dockerfile  README.md  index.html  next.config.ts  nginx.conf  package-lock.json  package.json  tailwind.config.js  tailwind.config.ts  tsconfig.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vercel.json  vite.config.js  vite.config.ts
party/: package.json  partykit.json  tsconfig.json
scripts/: apply-supabase-migrations.mjs  (+1 more)
(+137 files in other folders)
