[project]
name = "checkers-backend"
version = "0.1.0"
description = "Beknur Tanibergeb's project for Nfactorial 26!"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.32",
  "pydantic[email]>=2.9",
  "email-validator>=2.2",
  "pydantic-settings>=2.5",
  "sqlalchemy[asyncio]>=2.0.36",
  "alembic>=1.13",
  "asyncpg>=0.29",
  "aiosqlite>=0.20",
  "passlib[bcrypt]>=1.7.4",
  "bcrypt>=4.2,<5",
  "python-jose[cryptography]>=3.3",
  "python-multipart>=0.0.12",
  "httpx>=0.27",
  "stripe>=11.1",
  "anthropic>=0.39",
  "websockets>=13",
  "itsdangerous>=2.2",
  "orjson>=3.10",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3",
  "pytest-asyncio>=0.24",
  "pytest-cov>=5",
  "ruff>=0.7",
  "mypy>=1.13",
  "httpx>=0.27",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-q --strict-markers"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "W"]
ignore = ["E501"]
